--- a/Starter/pom.xml
+++ b/Starter/pom.xml
@@ -40,5 +40,11 @@
     	<artifactId>spring-context-support</artifactId>
     	<version>4.3.8.RELEASE</version>
     </dependency>
+    
+    <dependency>
+	    <groupId>org.jdom</groupId>
+	    <artifactId>jdom2</artifactId>
+	    <version>2.0.6</version>
+	</dependency>
   </dependencies>
 </project>
