--- a/Starter/pom.xml
+++ b/Starter/pom.xml
@@ -46,5 +46,23 @@
 	    <artifactId>jdom2</artifactId>
 	    <version>2.0.6</version>
 	</dependency>
+	
+	<dependency>
+	 	<groupId>pl.edu.agh.toik</groupId>
+    	<artifactId>worker</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+	</dependency>
+	
+	<dependency>
+	 	<groupId>pl.edu.agh.toik</groupId>
+	    <artifactId>migration-topology</artifactId>
+	    <version>0.0.1-SNAPSHOT</version>
+	</dependency>
+	
+	<dependency>
+	 	<groupId>pl.edu.agh.toik</groupId>
+	    <artifactId>communication-service</artifactId>
+	    <version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 </project>
