--- a/communication/pom.xml
+++ b/communication/pom.xml
@@ -2,20 +2,22 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<!-- 
 	<parent>
-		<groupId>pl.edu.agh.lab.toik</groupId>
-		<artifactId>communication</artifactId>
+		<groupId>pl.edu.agh</groupId>
+		<artifactId>toik</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	 -->
-	<artifactId>communication-service</artifactId>
-	<packaging>jar</packaging>
 
-	<name>communication-service</name>
+	<groupId>pl.edu.agh.toik</groupId>
+	<artifactId>communication</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>communication</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -82,7 +84,4 @@
 
         </plugins>
 	</build>
-
-	<groupId>pl.edu.agh.toik</groupId>
-	<version>0.0.1-SNAPSHOT</version>
 </project>
