--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -2,7 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>pl.edu.agh.eas</groupId>
+  <parent>
+    <groupId>pl.edu.agh</groupId>
+    <artifactId>toik</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+
+  <groupId>pl.edu.agh.toik</groupId>
   <artifactId>starter</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -12,6 +18,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>4.3.8.RELEASE</spring.version>
+	<maven.compiler.source>1.8</maven.compiler.source>
+	<maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -54,14 +62,14 @@
 	</dependency>
 	
 	<dependency>
-	 	<groupId>pl.edu.agh.toik</groupId>
+	    <groupId>pl.edu.agh.toik</groupId>
 	    <artifactId>migration-topology</artifactId>
 	    <version>0.0.1-SNAPSHOT</version>
 	</dependency>
 	
 	<dependency>
-	 	<groupId>pl.edu.agh.toik</groupId>
-	    <artifactId>communication-service</artifactId>
+	    <groupId>pl.edu.agh.toik</groupId>
+	    <artifactId>communication</artifactId>
 	    <version>0.0.1-SNAPSHOT</version>
 	</dependency>
   </dependencies>
