--- a/communication/pom.xml
+++ b/communication/pom.xml
@@ -2,20 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-	    <groupId>pl.edu.agh</groupId>
-	    <artifactId>toik</artifactId>
-	    <version>0.0.1-SNAPSHOT</version>
- 	</parent>
- 	
- 	<groupId>pl.edu.agh.toik</groupId>
-	<artifactId>communication</artifactId>
-	<packaging>jar</packaging>
 
+	<parent>
+		<groupId>pl.edu.agh</groupId>
+		<artifactId>toik</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+
+	<groupId>pl.edu.agh.toik</groupId>
+	<artifactId>communication</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>communication</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -79,7 +82,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-
         </plugins>
 	</build>
 </project>
