--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -8,61 +8,72 @@
     <artifactId>toik</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  
-  <groupId>pl.edu.agh.eas</groupId>
+
+  <groupId>pl.edu.agh.toik</groupId>
   <artifactId>starter</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>starter</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring.version>4.3.8.RELEASE</spring.version>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>4.3.8.RELEASE</spring.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>4.3.8.RELEASE</version>
-        <scope>runtime</scope>
-    </dependency>
+	<dependencies>
+		<dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-core</artifactId>
+		  <version>${spring.version}</version>
+		</dependency>
 
-    <dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-context-support</artifactId>
-    	<version>4.3.8.RELEASE</version>
-    </dependency>
-    
-    <dependency>
-	    <groupId>org.jdom</groupId>
-	    <artifactId>jdom2</artifactId>
-	    <version>2.0.6</version>
-	</dependency>
-	
-	<dependency>
-	 	<groupId>pl.edu.agh.toik</groupId>
-    	<artifactId>worker</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
-	</dependency>
-	
-	<dependency>
-	 	<groupId>pl.edu.agh.toik</groupId>
-	    <artifactId>migration-topology</artifactId>
-	    <version>0.0.1-SNAPSHOT</version>
-	</dependency>
-	
-	<dependency>
-	 	<groupId>pl.edu.agh.toik</groupId>
-	    <artifactId>communication</artifactId>
-	    <version>0.0.1-SNAPSHOT</version>
-	</dependency>
-  </dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.3.8.RELEASE</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>4.3.8.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom2</artifactId>
+			<version>2.0.6</version>
+		</dependency>
+
+		<dependency>
+		 	<groupId>pl.edu.agh.toik</groupId>
+			<artifactId>worker</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>pl.edu.agh.toik</groupId>
+			<artifactId>migration-topology</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>pl.edu.agh.toik</groupId>
+			<artifactId>communication</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<configuration>
+		    <source>1.8</source>
+		    <target>1.8</target>
+		</configuration>
+	</plugin>
 </project>
