--- a/visualization/pom.xml
+++ b/visualization/pom.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>pl.edu.agh</groupId>
-    <artifactId>toik</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>pl.edu.agh.toik</groupId>
-  <artifactId>visualization</artifactId>
-  <name>visualization</name>
-  <url>http://maven.apache.org</url>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>pl.edu.agh</groupId>
+		<artifactId>toik</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>pl.edu.agh.toik</groupId>
+	<artifactId>visualization</artifactId>
+	<name>visualization</name>
+	<url>http://maven.apache.org</url>
+
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+  	</properties>
+
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<configuration>
+		    <source>1.8</source>
+		    <target>1.8</target>
+		</configuration>
+	</plugin>
 </project>
